examples/testgui/Errors/postgui.hal
net external-spindle-start halui.spindle.0.start <= flexhal.spindle-start
net external-spindle-stop halui.spindle.0.stop <= flexhal.spindle-stop

